--- a/css/main.css
+++ b/css/main.css
@@ -496,6 +496,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.visible {
+  visibility: visible;
+}
+
 .absolute {
   position: absolute;
 }
@@ -675,6 +679,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-self: flex-end;
 }
 
+.overflow-visible {
+  overflow: visible;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -686,6 +694,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-l-full {
   border-top-left-radius: 9999px;
   border-bottom-left-radius: 9999px;
+}
+
+.border-red-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 
 .bg-brightRed {
@@ -892,6 +905,40 @@ body {
 
 .open .hamburger-bottom {
   transform: rotate(-45deg) translateY(6px) translate(-6px);
+}
+
+/* .swiper {
+    width: 600px;
+    height: 300px;
+  } */
+
+/* .swiper{
+    overflow: visible;
+}
+
+.swiper-wrapper{
+    overflow: visible;
+}
+
+.swiper-slide{
+    overflow: visible;
+} */
+
+.swiper-pagination{
+  margin-bottom: -50px;
+}
+
+.swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  border: 1px solid hsl(12, 88%, 59%);
+  background: white;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  color: hsl(12, 88%, 59%);
+  background: hsl(12, 88%, 59%);
 }
 
 .hover\:bg-brightRedLight:hover {
