--- a/input.css
+++ b/input.css
@@ -71,3 +71,35 @@ body {
 .open .hamburger-bottom {
     transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
+
+/* .swiper {
+    width: 600px;
+    height: 300px;
+  } */
+
+/* .swiper{
+    overflow: visible;
+}
+
+.swiper-wrapper{
+    overflow: visible;
+}
+
+.swiper-slide{
+    overflow: visible;
+} */
+.swiper-pagination{
+    margin-bottom: -50px;
+}
+
+.swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    border: 1px solid hsl(12, 88%, 59%);
+    background: white;
+    opacity: 1;
+}
+.swiper-pagination-bullet-active {
+    color: hsl(12, 88%, 59%);
+    background: hsl(12, 88%, 59%);
+}
