buttons and active states

--- a/css/main.css
+++ b/css/main.css
@@ -802,8 +802,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .leading-tight {
@@ -825,10 +833,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: hsl(12 88% 59% / var(--tw-text-opacity));
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-brightRed\/50 {
+  --tw-shadow-color: hsl(12 88% 59% / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .drop-shadow-md {
@@ -838,9 +851,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 body {
   background-image: url('../img/bg-tablet-pattern.svg');
-  background-repeat: no-repeat;
+  background-repeat:no-repeat;
   background-size: 800px;
-  background-position: 90% -25%;
+  background-position: 110% -22%;
 }
 
 #cta{
@@ -907,22 +920,7 @@ body {
   transform: rotate(-45deg) translateY(6px) translate(-6px);
 }
 
-/* .swiper {
-    width: 600px;
-    height: 300px;
-  } */
-
-/* .swiper{
-    overflow: visible;
-}
-
-.swiper-wrapper{
-    overflow: visible;
-}
-
-.swiper-slide{
-    overflow: visible;
-} */
+/* swiper pagination custom css */
 
 .swiper-pagination{
   margin-bottom: -50px;
@@ -946,11 +944,6 @@ body {
   background-color: hsl(12 88% 69% / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
 .hover\:text-darkGrayishBlue:hover {
   --tw-text-opacity: 1;
   color: hsl(227 12% 61% / var(--tw-text-opacity));
@@ -959,6 +952,10 @@ body {
 .hover\:text-brightRed:hover {
   --tw-text-opacity: 1;
   color: hsl(12 88% 59% / var(--tw-text-opacity));
+}
+
+.hover\:text-opacity-50:hover {
+  --tw-text-opacity: 0.5;
 }
 
 .focus\:outline-none:focus {
